--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^28.1.4",
+    "@types/jsdom": "^16.2.14",
     "@types/node": "^18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
@@ -23,6 +24,7 @@
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-n": "^15.2.4",
     "jest": "^28.1.2",
+    "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
