--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^28.1.2",
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
+    "prettier-plugin-md-nocjsp": "^1.2.0",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
